Removing Fxml, adding controller and placing scenes on table